# pastelogue

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: macos_make_release.sh  macos_setup_exiv2.sh  windows_make_release.ps1  windows_setup_exiv2.ps1
src/: api.rs  check_file.rs  date_time.rs  exiv2.rs  extract_metadata.rs  fs_operations.rs  lib.rs  main.rs  main_cli.rs  main_server.rs  preflight.rs  processing.rs  scan_dir.rs
src/exif/: exif_date_time.rs  exiv2.rs  extract_metadata.rs  mod.rs
src/processing/: check_file.rs  fs_operations.rs  mod.rs  processor.rs  scan_dir.rs
src/server/: api.rs
tests/: server_it_test.rs
