[package]
name = "pastelogue"
version = "0.6.0"
description = "Automatically catalogue your photo collection"
authors = ["Deseteral <deseteral@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Deseteral/pastelogue"
repository = "https://github.com/Deseteral/pastelogue"

edition = "2018"

exclude = [
    ".github",
    "release",
    "resources"
]

[lib]
name = "pastelogue"
path = "src/lib.rs"

[[bin]]
name = "pastelogue"
path = "src/main.rs"

[[bin]]
name = "pastelogue_server"
path = "src/main_server.rs"

[dependencies]
kamadak-exif = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rustyline = "5.0"

[dev-dependencies]
fs_extra = "1"
path-slash = "0.1.3"
