[package]
name = "pastelogue"
version = "0.6.2"
description = "Automatically catalogue your photo collection"
authors = ["Deseteral <deseteral@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Deseteral/pastelogue"
repository = "https://github.com/Deseteral/pastelogue"
publish = false

edition = "2018"

[lib]
name = "pastelogue"
path = "src/lib.rs"

[[bin]]
name = "pastelogue"
path = "src/main_cli.rs"

[[bin]]
name = "pastelogue_server"
path = "src/server/main_server.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rustyline = "5.0"

[dev-dependencies]
fs_extra = "1"
